@@ -1820,7 +1820,7 @@ ipmi_cmd_raw (ipmi_ctx_t ctx,
   else /* ctx->type == IPMI_DEVICE_SUNBMC */
     rv = ipmi_sunbmc_cmd_raw_api (ctx, buf_rq, buf_rq_len, buf_rs, buf_rs_len);
 
-  if (ctx->flags & IPMI_FLAGS_DEBUG_DUMP)
+  if (ctx->flags & IPMI_FLAGS_DEBUG_DUMP && rv >= 0)
     {
       /* lan packets are dumped in ipmi lan code */
       /* kcs packets are dumped in kcs code */
@@ -1925,6 +1925,44 @@ ipmi_cmd_raw_ipmb (ipmi_ctx_t ctx,
   ctx->lun = lun;
   ctx->net_fn = net_fn;
 
+  if (ctx->flags & IPMI_FLAGS_DEBUG_DUMP)
+    {
+      /* lan packets are dumped in ipmi lan code */
+      /* kcs packets are dumped in kcs code */
+      /* ssif packets are dumped in ssif code */
+      if (ctx->type != IPMI_DEVICE_LAN
+          && ctx->type != IPMI_DEVICE_LAN_2_0
+          && ctx->type != IPMI_DEVICE_KCS
+          && ctx->type != IPMI_DEVICE_SSIF)
+        {
+          char hdrbuf[DEBUG_UTIL_HDR_BUFLEN];
+          uint8_t cmd = 0;
+	  uint8_t group_extension = 0;
+
+          cmd = ((uint8_t *)buf_rq)[0];
+	  if (IPMI_NET_FN_GROUP_EXTENSION (ctx->net_fn))
+	    {
+	      if (buf_rq_len > 1)
+		group_extension = ((uint8_t *)buf_rq)[1];
+	    }
+    
+          debug_hdr_cmd (DEBUG_UTIL_TYPE_INBAND,
+                         DEBUG_UTIL_DIRECTION_REQUEST,
+                         ctx->net_fn,
+                         cmd,
+			 group_extension,
+                         hdrbuf,
+                         DEBUG_UTIL_HDR_BUFLEN);
+
+          ipmi_dump_hex (STDERR_FILENO,
+                         NULL,
+                         hdrbuf,
+                         NULL,
+                         buf_rq,
+                         buf_rq_len);
+        }
+    }
+
   if (ctx->type == IPMI_DEVICE_LAN)
     rv = ipmi_lan_cmd_raw_ipmb (ctx,
 				buf_rq,
@@ -1953,6 +1991,45 @@ ipmi_cmd_raw_ipmb (ipmi_ctx_t ctx,
     {
       API_SET_ERRNUM (ctx, IPMI_ERR_COMMAND_INVALID_FOR_SELECTED_INTERFACE);
       return (-1);
+    }
+
+  if (ctx->flags & IPMI_FLAGS_DEBUG_DUMP && rv >= 0)
+    {
+      /* lan packets are dumped in ipmi lan code */
+      /* kcs packets are dumped in kcs code */
+      /* ssif packets are dumped in ssif code */
+      if (ctx->type != IPMI_DEVICE_LAN
+          && ctx->type != IPMI_DEVICE_LAN_2_0
+          && ctx->type != IPMI_DEVICE_KCS
+          && ctx->type != IPMI_DEVICE_SSIF)
+        {
+          char hdrbuf[DEBUG_UTIL_HDR_BUFLEN];
+          uint8_t cmd = 0;
+	  uint8_t group_extension = 0;
+
+          cmd = ((uint8_t *)buf_rq)[0];
+	  if (IPMI_NET_FN_GROUP_EXTENSION (ctx->net_fn))
+	    {
+	      if (buf_rq_len > 1)
+		group_extension = ((uint8_t *)buf_rq)[1];
+	    }
+
+          /* its ok to use the "request" net_fn */
+          debug_hdr_cmd (DEBUG_UTIL_TYPE_INBAND,
+                         DEBUG_UTIL_DIRECTION_RESPONSE,
+                         ctx->net_fn,
+                         cmd,
+			 group_extension,
+                         hdrbuf,
+                         DEBUG_UTIL_HDR_BUFLEN);
+
+          ipmi_dump_hex (STDERR_FILENO,
+                         NULL,
+                         hdrbuf,
+                         NULL,
+                         buf_rs,
+                         rv);
+        }
     }
 
   /* errnum set in ipmi_*_cmd_raw functions */
